# OpenGI

./: AUTHORS  CMakeLists.txt  ChangeLog  NEWS  README.md  config.h  config.h.in
examples/gim/: CMakeLists.txt  gim.c
include/GI/: gi.h
src/: CMakeLists.txt  Mainpage.dox  gi_blas.c  gi_blas.h  gi_container.c  gi_container.h  gi_context.c  gi_context.h  gi_cutter.c  gi_cutter.h  gi_gl.c  gi_gl.h  gi_image.c  gi_image.h  gi_math.c  gi_math.h  gi_memory.c  gi_memory.h  gi_mesh.c  gi_mesh.h  gi_multiresolution.c  gi_multiresolution.h  gi_numerics.c  gi_numerics.h  gi_parameterizer.c  gi_parameterizer.h  gi_sampler.c  gi_sampler.h  gi_thread.c  gi_thread.h
